<resources>
    <string name="app_name">WhoIsSmarter</string>
    <string name="question">Question</string>
    <string name="play_again">Play again</string>
    <string name="time">20</string>
    <string name="wrongans">Opps the ans was wrong</string>
    <string name="timeup">Time Up</string>
    <string name="play_game">Play Game</string>
    <string name="quit">Quit</string>
    <string name="cancel">✖</string>
    <string name="AboutMe">About Me</string>
    <string name="game">Game</string>
    <string name="music_showbiz_movies">Music, Showbiz, Movies</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="english">English</string>
    <string name="sports">Sports</string>
    <string name="computer">Computer</string>
    <string name="computer_quiz">Computer Quiz</string>
    <string name="english_quiz">English Quiz</string>
    <string name="english_puzzle">English Puzzle</string>
    <string name="submit">SUBMIT</string>
    <string name="game_quiz">Game Quiz</string>
    <string name="ch_c_m_ng_b_n_chi_n_th_ng">Chúc Mừng Bạn Đã Chiến Thắng</string>
    <string name="b_n_ng">Bạn Đã Đúng:</string>
    <string name="general_quiz">General Quiz</string>
    <string name="music_quiz">Music Quiz</string>
    <string name="nghe_nh_c_o_n_t_n_b_i_h_t">Nghe Nhạc Đoán Tên Bài Hát</string>
    <string name="about_me">About Me</string>
    <string name="sport_quiz">Sport Quiz</string>
    <string name="correct">Correct</string>
    <string name="pick_mode">Pick Mode</string>
    <string name="normal_c_b_n">Normal (Cơ Bản)</string>
    <string name="infinite_v_t_n">Infinite (Vô Tận)</string>
    <string name="u_i_h_nh_b_t_ch">Đuổi Hình Bắt Chữ</string>
    <string name="puzzle_gh_p_ch">Puzzle (Ghép Chữ)</string>
    <string name="time_up">Time Up</string>
    <string name="time_up_game_over">Time Up Game Over</string>
    <string name="wrong">Wrong</string>
    <string name="wrong_game_over">Wrong Game Over</string>
</resources>
