<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/fbutton_color_clouds"
    tools:context=".Activity.HomeActivity">
    <ImageView
        android:id="@+id/tQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/logo1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/eucliwood" />

    <Button
        android:id="@+id/playGame"
        android:background="@drawable/shape"
        android:layout_width="300dp"
        android:text="@string/play_game"
        android:layout_height="wrap_content"
        android:textColor="#297123"
        android:textSize="24dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>


    <Button
        android:id="@+id/setting"
        android:background="@drawable/shape"
        android:layout_width="300dp"
        android:text="@string/AboutMe"
        android:layout_height="wrap_content"
        android:textColor="#297123"
        android:textSize="24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>
    <Button
        android:id="@+id/quit"
        android:background="@drawable/shape"
        android:layout_width="300dp"
        android:text="@string/quit"
        android:layout_height="wrap_content"
        android:textColor="#297123"
        android:textSize="24dp"/>
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tgbSound"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/tgb_sound"
            android:minWidth="48dp"
            android:textOff=""
            android:textOn="" />

    </LinearLayout>
</LinearLayout>
