<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F80000"
    tools:context=".Activity.GameNormalActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#10DE2C"
        android:minHeight="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <ImageView
                android:id="@+id/coinImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/coinnn" />
            <TextView
                android:id="@+id/coinText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_toRightOf="@id/coinImage"/>

            <TextView
                android:id="@+id/triviaQuizText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/game_quiz"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_toLeftOf="@+id/timeText"
                android:layout_toRightOf="@+id/coinText" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="10dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/time"
                android:textSize="20sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/triviaQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:layout_margin="10dp"
            android:onClick="buttonA"
            android:text=""
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:layout_margin="10dp"
            android:onClick="buttonB"
            android:text=""
            android:textColor="@android:color/black"/>


        <Button
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:layout_margin="10dp"
            android:onClick="buttonC"
            android:text=""
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/buttonD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:layout_margin="10dp"
            android:onClick="buttonD"
            android:text=""
            android:textColor="@android:color/black"/>

    </LinearLayout>


</LinearLayout>
